@@ -53,6 +53,7 @@ Release 0.9.2
 - add gv_mail email templates and supporting code
 - make $language available to all email tempalates
 - move all code to extract template vars from email templates to ZMEventFixes
+- add qv_queue email templates (and supporting code)
 
 Release 0.9.1
 - zm_custom_validate_password in zm_master_password does not return a reference!
